Fix Alignment Session Forms

--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -15,7 +15,7 @@
 
   .container {
     display: table;
-    height: 100%;
+    height: 100vh;
   }
 
   .center-form {
